--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Compiled Binaries
+src/dispatch_test
+
 # Prerequisites
 *.d
 
@@ -30,6 +33,9 @@
 *.exe
 *.out
 *.app
+
+# Vagrant
+.vagrant/
 
 **/*~
 **/#*#
