pull bridge bits in but don't call yet

--- a/src/Makefile
+++ b/src/Makefile
@@ -6,8 +6,10 @@ main.o: main.cpp uvxbridge.h
 	$(CXX) $(CFLAGS) -c main.cpp
 cmddispatch.o: cmddispatch.cpp uvxbridge.h
 	$(CXX) $(CFLAGS) -c cmddispatch.cpp
+datapath.o: datapath.cpp uvxbridge.h
+	$(CXX) $(CFLAGS) -c datapath.cpp
 
-dispatch_test: main.o cmddispatch.o
+dispatch_test: main.o cmddispatch.o datapath.o
 	$(CXX) main.o cmddispatch.o -o dispatch_test
 
 
