--- a/src/Makefile
+++ b/src/Makefile
@@ -6,11 +6,13 @@ main.o: main.cpp uvxbridge.h
 	$(CXX) $(CFLAGS) -c main.cpp
 cmddispatch.o: cmddispatch.cpp uvxbridge.h
 	$(CXX) $(CFLAGS) -c cmddispatch.cpp
-datapath.o: datapath.cpp uvxbridge.h
+datapath.o: datapath.cpp uvxbridge.h uvxlan.h
 	$(CXX) $(CFLAGS) -c datapath.cpp
+uvxlan.o: uvxlan.cpp uvxbridge.h uvxlan.h
+	$(CXX) $(CFLAGS) -c uvxlan.cpp
 
-dispatch_test: main.o cmddispatch.o datapath.o
-	$(CXX) main.o cmddispatch.o -o dispatch_test
+dispatch_test: main.o cmddispatch.o datapath.o uvxlan.o
+	$(CXX) main.o cmddispatch.o datapath.o uvxlan.o -o dispatch_test
 
 
 all: dispatch_test
