make datapath completely standalon

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,15 +1,17 @@
 default: all
 
-CFLAGS= -Wall -std=c++11 -DDEBUG
+CFLAGS= -Wall -DDEBUG
+CXXFLAGS= $(CFLAGS)
+CXXFLAGS+= -std=c++11 
 
 main.o: main.cpp uvxbridge.h
-	$(CXX) $(CFLAGS) -c main.cpp
+	$(CXX) $(CXXFLAGS) -c main.cpp
 cmddispatch.o: cmddispatch.cpp uvxbridge.h
-	$(CXX) $(CFLAGS) -c cmddispatch.cpp
-datapath.o: datapath.cpp uvxbridge.h uvxlan.h
-	$(CXX) $(CFLAGS) -c datapath.cpp
+	$(CXX) $(CXXFLAGS) -c cmddispatch.cpp
+datapath.o: datapath.c uvxbridge.h uvxlan.h
+	$(CC) $(CFLAGS) -c datapath.c
 uvxlan.o: uvxlan.cpp uvxbridge.h uvxlan.h
-	$(CXX) $(CFLAGS) -c uvxlan.cpp
+	$(CXX) $(CXXFLAGS) -c uvxlan.cpp
 
 uvxbridge: main.o cmddispatch.o datapath.o uvxlan.o
 	$(CXX) main.o cmddispatch.o datapath.o uvxlan.o -o uvxbridge
