--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,7 @@
 default: all
 
 CFLAGS= -Wall -DDEBUG
+CFLAGS+=  -Wextra -Wcast-qual -Wcast-align -Wshadow -Wstrict-aliasing=1 -Wswitch-enum -Wdeclaration-after-statement -Wstrict-prototypes -Wundef
 CXXFLAGS= $(CFLAGS)
 CXXFLAGS+= -std=c++11 
 
@@ -13,8 +14,11 @@ datapath.o: datapath.c uvxbridge.h uvxlan.h
 uvxlan.o: uvxlan.cpp uvxbridge.h uvxlan.h
 	$(CXX) $(CXXFLAGS) -c uvxlan.cpp
 
-uvxbridge: main.o cmddispatch.o datapath.o uvxlan.o
-	$(CXX) main.o cmddispatch.o datapath.o uvxlan.o -o uvxbridge
+xxhash.o: xxhash.c xxhash.h
+	$(CC) $(CFLAGS) -c xxhash.c
+
+uvxbridge: main.o cmddispatch.o datapath.o uvxlan.o xxhash.o
+	$(CXX) main.o cmddispatch.o datapath.o uvxlan.o xxhash.o -o uvxbridge
 
 
 all: uvxbridge
