--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 .include "../Makefile.inc"
 
 SRCS=main.cpp dispatch.cpp datapath.c uvxlan.cpp xxhash.c
-LDFLAGS+=-pthread -L../ipfw -lipfw
+LDFLAGS+=-pthread -L../kipfw -lkipfw
 PROG_CXX=uvxbridge
 MAN=
 
