import ipfw command line util

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -6,6 +6,11 @@ CXXFLAGS+= -std=c++11
 
 OBJDIR=objs
 
+M ?= ${.CURDIR}
+INCDIRS = -I$(M)/../$(OBJDIR)/include_e -DEMULATE_SYSCTL
+INCDIRS += -I$(M)/../kipfw/sys -I$(M)/../kipfw/extra/sys -I$(M)/../kipfw/extra/sys/contrib/pf
+
+
 
 
 
