add static config option

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 .include "../Makefile.inc"
 
-SRCS=main.cpp dispatch.cpp datapath.c uvxlan.cpp xxhash.c
+SRCS=main.cpp dispatch.cpp datapath.c uvxlan.cpp xxhash.c config.cpp
 LDFLAGS+=-pthread -L../kipfw -lkipfw
 PROG_CXX=uvxbridge
 MAN=
