--- a/Makefile.inc
+++ b/Makefile.inc
@@ -1,5 +1,5 @@
 
-CFLAGS+= -Wall -DDEBUG
+CFLAGS+= -Wall -DDEBUG -g -O2
 CFLAGS+=  -Wextra -Wcast-qual -Wcast-align -Wshadow -Wstrict-aliasing=1 -Wswitch-enum -Wdeclaration-after-statement -Wstrict-prototypes -Wundef
 CXXFLAGS+= $(CFLAGS)
 CXXFLAGS+= -std=c++11 
