fixes to debug vxlan encap/decap in to existence

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 .include "../Makefile.inc"
 
 SRCS=main.cpp dispatch.cpp datapath.c uvxlan.cpp xxhash.c config.cpp
-LDFLAGS+=-pthread -L../kipfw -lkipfw
+LDFLAGS+=-pthread -L${.CURDIR}/../kipfw -lkipfw
 PROG_CXX=uvxbridge
 MAN=
 
