implement framework for ipfw control dispatch

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,6 +2,9 @@
 
 SRCS=main.cpp dispatch.cpp datapath.c uvxlan.cpp xxhash.c config.cpp
 LDFLAGS+=-pthread -L${.CURDIR}/../kipfw -lkipfw
+CFLAGS+= -include ${.CURDIR}/../kipfw/extra/glue.h
+CFLAGS+= -DUSERSPACE
+CFLAGS+= -I${.CURDIR}/../kipfw/extra
 PROG_CXX=uvxbridge
 MAN=
 
