implement ipfw_check, add to ingress and egress

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,9 +4,9 @@ PROG_CXX=uvxbridge
 SRCS=main.cpp dispatch.cpp datapath.c uvxlan.cpp xxhash.c config.cpp
 LDADD= -L../kipfw -lkipfw
 LDFLAGS+=-pthread 
-CFLAGS+= -include ${.CURDIR}/../kipfw/extra/glue.h
-CFLAGS+= -DUSERSPACE
+CFLAGS+= -DUSERSPACE -DINET -D_BSD_SOURCE -D_DEFAULT_SOURCE $(INCDIRS)
 CFLAGS+= -I${.CURDIR}/../kipfw/extra
+CFLAGS+= -include ${.CURDIR}/../kipfw/extra/glue.h
 MAN=
 
 .include <bsd.prog.mk>
