--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,8 @@
 .include "../Makefile.inc"
 
 PROG_CXX=uvxbridge
-SRCS=main.cpp dispatch.cpp uvxlan.cpp xxhash.c config.cpp dtls.cpp
+SRCS=main.cpp dispatch.cpp uvxlan.cpp xxhash.c config.cpp dtls.cpp \
+	uvxcommand.cpp
 LDADD= -L../kipfw -lkipfw -L/usr/local/lib -lbotan-2 \
 	-L${.CURDIR}/../common -lnmutil
 LDFLAGS+=-pthread 
