replace LOLEBR with EBR

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,12 +3,13 @@
 PROG_CXX=uvxbridge
 SRCS=main.cpp uvxlan.cpp xxhash.c config.cpp uvxcommand.cpp
 LDADD= -L../kipfw -lkipfw -L/usr/local/lib -lbotan-2 \
-	-L${.CURDIR}/../common -lnmutil
+	-L${.CURDIR}/../common -lnmutil \
+	-L/usr/local/lib -lck
 LDFLAGS+=-pthread
 CFLAGS+= -Wno-cast-align -Wno-address-of-packed-member
 CFLAGS+= -DUSERSPACE -DINET -D_BSD_SOURCE -D_DEFAULT_SOURCE $(INCDIRS)
 CFLAGS+= -I${.CURDIR}/../kipfw/extra -I/usr/local/include/botan-2
-CFLAGS+= -I${.CURDIR}/../common
+CFLAGS+= -I${.CURDIR}/../common -I/usr/local/include
 MAN=
 
 .include <bsd.prog.mk>
